--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,38 @@ jobs:
             npm install
             npm run test
 
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      # Restore from cache
+      - restore_cache:
+          keys: [ frontend-build ]
+      - run:
+          name: Scan Frontend
+          command: |
+            cd frontend
+            npm install
+          # npm install oauth-sign@^0.9.0
+            npm audit --audit-level=critical
+
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      # Restore from cache
+      - restore_cache:
+          keys: [ backend-build ]
+      - run:
+          name: Scan Backend
+          command: |
+            cd backend
+            npm install
+          # npm install oauth-sign@^0.9.0
+            npm audit --audit-level=critical
+
 workflows:
   default:
     jobs:
@@ -105,4 +137,8 @@ workflows:
       - test-frontend:
           requires: [ build-frontend ]
       - test-backend:
+          requires: [ build-backend ]
+      - scan-frontend:
+          requires: [ build-frontend ]
+      - scan-backend:
           requires: [ build-backend ]
